fixed some text

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3>Tarkkuus</h3>
                     <p>Tarkka muunto prosessi estäen yleisiä ongelmia Latexin muuntovaiheessa.</p>
                 </div>
-                
+
                 <div class="feature-card">
                     <div class="feature-icon">
                         <img src="image copy 3.png" height="50px" width="auto" alt="Context menu icon">
@@ -81,7 +81,7 @@
                     <div class="feature-icon">
                         <img src="image copy 4.png" width="50px" height="auto" alt="Clipboard icon">
                     </div>
-                    <h3>Kopio leikepöydälle</h3>
+                    <h3>Kopioi leikepöydälle</h3>
                     <p>Laajennus lisää valmiit muunnokset suoraan leikepöydälle.</p>
                 </div>
             </div>
